// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded blob 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "commitment": "0xb10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "dataStorageReferences": [],
            "index": 0,
            "proof": "b10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "size": 1500,
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "https://storage.googleapis.com/blobscan-test-bucket/70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "index": 0,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "https://storage.googleapis.com/blobscan-test-bucket/70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "index": 1,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "https://storage.googleapis.com/blobscan-test-bucket/70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "index": 2,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded results when multiple expands are requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasFee": "10000",
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "2883584",
        "blobGasMaxFee": "13107200",
        "blobGasUsed": "131072",
        "blobs": [
          {
            "commitment": "0xb10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "dataStorageReferences": [],
            "index": 0,
            "proof": "b10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "size": 1500,
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "from": "address2",
        "hash": "txHash016",
        "index": 0,
        "maxFeePerBlobGas": "100",
        "to": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasFee": "10000",
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "8650752",
        "blobGasMaxFee": "39321600",
        "blobGasUsed": "393216",
        "blobs": [
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "https://storage.googleapis.com/blobscan-test-bucket/70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "index": 0,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "https://storage.googleapis.com/blobscan-test-bucket/70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "index": 1,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "https://storage.googleapis.com/blobscan-test-bucket/70118930558/ob/Ha/sh/obHash004.txt",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "index": 2,
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "from": "optimismAddress",
        "hash": "txHash015",
        "index": 0,
        "maxFeePerBlobGas": "100",
        "rollup": "optimism",
        "to": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded transaction 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasFee": "10000",
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "2883584",
        "blobGasMaxFee": "13107200",
        "blobGasUsed": "131072",
        "blobs": [
          {
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "from": "address2",
        "hash": "txHash016",
        "index": 0,
        "maxFeePerBlobGas": "100",
        "to": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobAsCalldataGasFee": "10000",
        "blobAsCalldataGasUsed": "1000",
        "blobGasBaseFee": "8650752",
        "blobGasMaxFee": "39321600",
        "blobGasUsed": "393216",
        "blobs": [
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "from": "optimismAddress",
        "hash": "txHash015",
        "index": 0,
        "maxFeePerBlobGas": "100",
        "rollup": "optimism",
        "to": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return results up to and including the specified slot 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": "2023-05-10T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
          },
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
          },
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
          },
        ],
        "category": "rollup",
        "hash": "txHash004",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the latest results when no sort was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": "2023-08-31T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "category": "other",
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the oldest results when ascending order is specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": "2023-05-10T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
          },
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
          },
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
          },
        ],
        "category": "rollup",
        "hash": "txHash004",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": "2023-08-03T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to a provided rollup 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "250000",
    "blobGasPrice": "20",
    "blobGasUsed": "5000000",
    "excessBlobGas": "10000",
    "hash": "blockHash005",
    "number": 1005,
    "slot": 105,
    "timestamp": "2023-08-28T10:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash012",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash007",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to reorged blocks when 'reorged' type is specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "2500000",
    "excessBlobGas": "55000",
    "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
    "number": 1008,
    "slot": 110,
    "timestamp": "2023-08-31T15:50:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
          },
        ],
        "category": "rollup",
        "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the block range specified  1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": "2023-08-31T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "category": "other",
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "250000",
    "blobGasPrice": "20",
    "blobGasUsed": "5000000",
    "excessBlobGas": "10000",
    "hash": "blockHash005",
    "number": 1005,
    "slot": 105,
    "timestamp": "2023-08-28T10:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash012",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash013",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash005",
          },
        ],
        "category": "rollup",
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the date range specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash005",
          },
        ],
        "category": "rollup",
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": "2023-08-03T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the receiver address specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash007",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash001",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the sender address specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash001",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the sender and receiver addresses specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash007",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash001",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results ending at the block specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": "2023-05-10T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
          },
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
          },
          {
            "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
          },
        ],
        "category": "rollup",
        "hash": "txHash004",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results ending at the date specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": "2042780",
    "blobGasPrice": "22",
    "blobGasUsed": "786432",
    "excessBlobGas": "15000",
    "hash": "blockHash001",
    "number": 1001,
    "slot": 101,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash003",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the block specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the date specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": "2023-08-31T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "category": "other",
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the slot specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": "2023-08-31T14:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
          {
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "hash": "txHash015",
        "rollup": "optimism",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "rollup",
        "hash": "txHash007",
        "rollup": "optimism",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash002",
          },
        ],
        "category": "rollup",
        "hash": "txHash008",
        "rollup": "arbitrum",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash003",
          },
        ],
        "category": "other",
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash005",
          },
        ],
        "category": "rollup",
        "hash": "txHash011",
        "rollup": "base",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": "2023-08-03T12:00:00.000Z",
    "transactions": [
      {
        "blobs": [
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash002",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
          {
            "versionedHash": "blobHash001",
          },
        ],
        "category": "other",
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should return the total number of items when count is provided 1`] = `8`;

exports[`Block router > getByBlockId > should get a block by block number 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "hash": "txHash004",
      "rollup": "base",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get a block by hash 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "2500000",
  "excessBlobGas": "55000",
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": "2023-08-31T15:50:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "category": "rollup",
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
      "rollup": "optimism",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get a reorged block by block number 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "2500000",
  "excessBlobGas": "55000",
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": "2023-08-31T15:50:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "category": "rollup",
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
      "rollup": "optimism",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get the canonical block when providing a block number matching a reorged block 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
  "number": 1008,
  "slot": 108,
  "timestamp": "2023-08-31T16:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
        },
      ],
      "category": "other",
      "hash": "txHash016",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded blob 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b1",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "index": 0,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab1",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b2",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "index": 1,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab2",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b3",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "index": 2,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab3",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "hash": "txHash004",
      "rollup": "base",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded blob data 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b1",
          "data": "0xf9530408b74b2803432879b5e7fb5fdcbbcf7e71660f2f6a7cbd182eb9db7a026e0d0b",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "index": 0,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab1",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b2",
          "data": "0x682a4f046bbcf3a56762c7e719b030ff9c7c0df9181015daffe724296c59d6bb8dfd5c",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "index": 1,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab2",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b3",
          "data": "0x6eff1a27d044dc0d6f1d072c75ce47ccc63b5305b424eb4bafd250ad1de4985cd69fbc",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "index": 2,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab3",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "hash": "txHash004",
      "rollup": "base",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded results when multiple expands are requested 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobAsCalldataGasFee": "10000",
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "8650752",
      "blobGasMaxFee": "39321600",
      "blobGasUsed": "393216",
      "blobs": [
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b1",
          "data": "0xf9530408b74b2803432879b5e7fb5fdcbbcf7e71660f2f6a7cbd182eb9db7a026e0d0b",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "index": 0,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab1",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b2",
          "data": "0x682a4f046bbcf3a56762c7e719b030ff9c7c0df9181015daffe724296c59d6bb8dfd5c",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "index": 1,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab2",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b3",
          "data": "0x6eff1a27d044dc0d6f1d072c75ce47ccc63b5305b424eb4bafd250ad1de4985cd69fbc",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "index": 2,
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab3",
          "size": 131072,
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "from": "baseAddress",
      "hash": "txHash004",
      "index": 0,
      "maxFeePerBlobGas": "100",
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded transaction 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": "2023-05-10T12:00:00.000Z",
  "transactions": [
    {
      "blobAsCalldataGasFee": "10000",
      "blobAsCalldataGasUsed": "1000",
      "blobGasBaseFee": "8650752",
      "blobGasMaxFee": "39321600",
      "blobGasUsed": "393216",
      "blobs": [
        {
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "from": "baseAddress",
      "hash": "txHash004",
      "index": 0,
      "maxFeePerBlobGas": "100",
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;

exports[`Block router > getBySlot > should fail when trying to get a block with a negative slot 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 0,
    \\"type\\": \\"number\\",
    \\"inclusive\\": false,
    \\"exact\\": false,
    \\"message\\": \\"Number must be greater than 0\\",
    \\"path\\": [
      \\"slot\\"
    ]
  }
]"
`;

exports[`Block router > getBySlot > should fail when trying to get a block with a negative slot 2`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 0,
    "type": "number",
    "inclusive": false,
    "exact": false,
    "message": "Number must be greater than 0",
    "path": [
      "slot"
    ]
  }
]]
`;

exports[`Block router > getBySlot > should fail when trying to get a reorged block by slot 1`] = `"Block with slot 110 not found"`;

exports[`Block router > getBySlot > should get a block by slot 1`] = `
{
  "blobAsCalldataGasUsed": "2042780",
  "blobGasPrice": "22",
  "blobGasUsed": "786432",
  "excessBlobGas": "15000",
  "hash": "blockHash001",
  "number": 1001,
  "slot": 101,
  "timestamp": "2022-10-16T12:00:00.000Z",
  "transactions": [
    {
      "blobs": [
        {
          "versionedHash": "blobHash001",
        },
        {
          "versionedHash": "blobHash002",
        },
        {
          "versionedHash": "blobHash003",
        },
      ],
      "category": "other",
      "hash": "txHash001",
    },
    {
      "blobs": [
        {
          "versionedHash": "blobHash001",
        },
      ],
      "category": "other",
      "hash": "txHash002",
    },
    {
      "blobs": [
        {
          "versionedHash": "blobHash001",
        },
        {
          "versionedHash": "blobHash002",
        },
      ],
      "category": "rollup",
      "hash": "txHash003",
      "rollup": "optimism",
    },
  ],
}
`;
